# zephyr-nucleo-h723zg-example

./: .gitignore  README.md
.github/workflows/: tests.yml
app/: CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
app/boards/: nucleo_h723zg.conf  nucleo_h723zg.overlay  qemu_x86.conf  qemu_x86.overlay
app/src/: adc_backend.h  cmd_read_regs.c  main.c  regs.c  regs.h
app/targets/hw/: adc_backend.c
app/targets/sim/: adc_backend.c  cmd_inject_adc.c
docs/: architecture.md  hardware.md  serial-testing.md
scripts/: test_serial.py
tests/: README.md
tests/integration/: conftest.py  pytest.ini  requirements-physical.txt  requirements.txt  test_adc.py  test_serial.py
tests/integration/configs/: physical.yaml  virtual.yaml
tests/integration/devices/: __init__.py  base.py  physical.py  qemu.py
tests/integration/instruments/: __init__.py  base.py  physical.py  rigol_adapter.py  virtual.py
tests/integration/instruments/rigol_dp832/: __init__.py  comm_base.py  rigol_dp.py
tests/unit/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/unit/src/: test_regs.c
